--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,6 @@ drf-spectacular
 django>5.1.1
 pytest==8.3.4 
 pytest-django==4.9.0
+loguru==0.7.3
+# python manage.py createcachetable my_cache_table
 
